--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@ body {
 }
 
 .card-container {
-  background-image: url("../public/assets/SpaceshipIdle.gif");
+  background-image: url("../public/assets/idle.gif");
   border-radius: 10px;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
   display: flex;
@@ -37,7 +37,7 @@ body {
   width: 100%;
 }
 
-.progress::after {
+.seat {
   border-radius: 3px;
   background-color: #2a265f;
   content: "";
@@ -45,13 +45,7 @@ body {
   top: 0;
   left: 0;
   height: 5px;
-  width: 50%;
-}
-
-.progress-text {
-  font-size: 10px;
-  opacity: 0.6;
-  letter-spacing: 1px;
+  width: 0%;
 }
 
 .players {
@@ -111,4 +105,11 @@ body {
   max-width: 10%;
   justify-content: center;
   padding: 5px;
+}
+
+.end-game-animation {
+  position: absolute;
+  height: 400px;
+  width: 500px;
+  margin-left: -12px;
 }
