--- a/styles/globals.css
+++ b/styles/globals.css
@@ -96,6 +96,12 @@ body {
   color: white;
 }
 
+.inline {
+  margin-left: -12px;
+  margin-right: -12px;
+  row-gap: 0px;
+}
+
 .cell {
   width: 50px;
   height: 50px;
